export const snapshot = {};

snapshot[`render order property 1`] = `24`;

snapshot[`render order property 2`] = `
{
  formats: [
    {
      engine: true,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engine: true,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engine: false,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engine: false,
      ext: ".json",
    },
    {
      engine: true,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engine: true,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engine: true,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engine: true,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engine: false,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engine: false,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
  ],
}
`;

snapshot[`render order property 3`] = `
[
]
`;

snapshot[`render order property 4`] = `
{
  content: "<p>Hello world</p>
",
  data: {
    content: "Hello world
",
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/extra-page/",
  },
  dest: {
    ext: ".html",
    path: "/extra-page/index",
  },
  src: {
    ext: ".md",
    path: "/extra-page",
    remote: undefined,
  },
}
`;

snapshot[`render order property 5`] = `
{
  content: "11",
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    renderOrder: 2,
    search: Search {},
    tags: [
    ],
    url: "/articles/11/",
  },
  dest: {
    ext: ".html",
    path: "/articles/11/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pages2[0]",
    remote: undefined,
  },
}
`;

snapshot[`render order property 6`] = `
{
  content: "12",
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    renderOrder: 2,
    search: Search {},
    tags: [
    ],
    url: "/articles/12/",
  },
  dest: {
    ext: ".html",
    path: "/articles/12/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pages2[1]",
    remote: undefined,
  },
}
`;

snapshot[`render order property 7`] = `
{
  content: "13",
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    renderOrder: 2,
    search: Search {},
    tags: [
    ],
    url: "/articles/13/",
  },
  dest: {
    ext: ".html",
    path: "/articles/13/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pages2[2]",
    remote: undefined,
  },
}
`;

snapshot[`render order property 8`] = `
{
  content: "14",
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    renderOrder: 2,
    search: Search {},
    tags: [
    ],
    url: "/articles/14/",
  },
  dest: {
    ext: ".html",
    path: "/articles/14/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pages2[3]",
    remote: undefined,
  },
}
`;

snapshot[`render order property 9`] = `
{
  content: "15",
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    renderOrder: 2,
    search: Search {},
    tags: [
    ],
    url: "/articles/15/",
  },
  dest: {
    ext: ".html",
    path: "/articles/15/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pages2[4]",
    remote: undefined,
  },
}
`;

snapshot[`render order property 10`] = `
{
  content: "16",
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    renderOrder: 2,
    search: Search {},
    tags: [
    ],
    url: "/articles/16/",
  },
  dest: {
    ext: ".html",
    path: "/articles/16/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pages2[5]",
    remote: undefined,
  },
}
`;

snapshot[`render order property 11`] = `
{
  content: "17",
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    renderOrder: 2,
    search: Search {},
    tags: [
    ],
    url: "/articles/17/",
  },
  dest: {
    ext: ".html",
    path: "/articles/17/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pages2[6]",
    remote: undefined,
  },
}
`;

snapshot[`render order property 12`] = `
{
  content: "18",
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    renderOrder: 2,
    search: Search {},
    tags: [
    ],
    url: "/articles/18/",
  },
  dest: {
    ext: ".html",
    path: "/articles/18/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pages2[7]",
    remote: undefined,
  },
}
`;

snapshot[`render order property 13`] = `
{
  content: "19",
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    renderOrder: 2,
    search: Search {},
    tags: [
    ],
    url: "/articles/19/",
  },
  dest: {
    ext: ".html",
    path: "/articles/19/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pages2[8]",
    remote: undefined,
  },
}
`;

snapshot[`render order property 14`] = `
{
  content: "20",
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    renderOrder: 2,
    search: Search {},
    tags: [
    ],
    url: "/articles/20/",
  },
  dest: {
    ext: ".html",
    path: "/articles/20/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pages2[9]",
    remote: undefined,
  },
}
`;

snapshot[`render order property 15`] = `
{
  content: "1",
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/articles/1/",
  },
  dest: {
    ext: ".html",
    path: "/articles/1/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pages[0]",
    remote: undefined,
  },
}
`;

snapshot[`render order property 16`] = `
{
  content: "2",
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/articles/2/",
  },
  dest: {
    ext: ".html",
    path: "/articles/2/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pages[1]",
    remote: undefined,
  },
}
`;

snapshot[`render order property 17`] = `
{
  content: "3",
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/articles/3/",
  },
  dest: {
    ext: ".html",
    path: "/articles/3/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pages[2]",
    remote: undefined,
  },
}
`;

snapshot[`render order property 18`] = `
{
  content: "4",
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/articles/4/",
  },
  dest: {
    ext: ".html",
    path: "/articles/4/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pages[3]",
    remote: undefined,
  },
}
`;

snapshot[`render order property 19`] = `
{
  content: "5",
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/articles/5/",
  },
  dest: {
    ext: ".html",
    path: "/articles/5/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pages[4]",
    remote: undefined,
  },
}
`;

snapshot[`render order property 20`] = `
{
  content: "6",
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/articles/6/",
  },
  dest: {
    ext: ".html",
    path: "/articles/6/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pages[5]",
    remote: undefined,
  },
}
`;

snapshot[`render order property 21`] = `
{
  content: "7",
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/articles/7/",
  },
  dest: {
    ext: ".html",
    path: "/articles/7/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pages[6]",
    remote: undefined,
  },
}
`;

snapshot[`render order property 22`] = `
{
  content: "8",
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/articles/8/",
  },
  dest: {
    ext: ".html",
    path: "/articles/8/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pages[7]",
    remote: undefined,
  },
}
`;

snapshot[`render order property 23`] = `
{
  content: "9",
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/articles/9/",
  },
  dest: {
    ext: ".html",
    path: "/articles/9/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pages[8]",
    remote: undefined,
  },
}
`;

snapshot[`render order property 24`] = `
{
  content: "10",
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/articles/10/",
  },
  dest: {
    ext: ".html",
    path: "/articles/10/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pages[9]",
    remote: undefined,
  },
}
`;

snapshot[`render order property 25`] = `
{
  content: '{"page":1,"totalPages":3,"totalResults":11,"previous":null,"next":"./page-2/index.html"}',
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    layout: "paginate.tmpl.js",
    page: undefined,
    paginate: [Function: paginate],
    pagination: {
      next: "./page-2/index.html",
      page: 1,
      previous: null,
      totalPages: 3,
      totalResults: 11,
    },
    renderOrder: 1,
    results: 5,
    search: Search {},
    tags: [
    ],
    url: "/pagination/page-1/",
  },
  dest: {
    ext: ".html",
    path: "/pagination/page-1/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pagination[0]",
    remote: undefined,
  },
}
`;

snapshot[`render order property 26`] = `
{
  content: '{"page":2,"totalPages":3,"totalResults":11,"previous":"./page-1/index.html","next":"./page-3/index.html"}',
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    layout: "paginate.tmpl.js",
    page: undefined,
    paginate: [Function: paginate],
    pagination: {
      next: "./page-3/index.html",
      page: 2,
      previous: "./page-1/index.html",
      totalPages: 3,
      totalResults: 11,
    },
    renderOrder: 1,
    results: 5,
    search: Search {},
    tags: [
    ],
    url: "/pagination/page-2/",
  },
  dest: {
    ext: ".html",
    path: "/pagination/page-2/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pagination[1]",
    remote: undefined,
  },
}
`;

snapshot[`render order property 27`] = `
{
  content: '{"page":3,"totalPages":3,"totalResults":11,"previous":"./page-2/index.html","next":null}',
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    layout: "paginate.tmpl.js",
    page: undefined,
    paginate: [Function: paginate],
    pagination: {
      next: null,
      page: 3,
      previous: "./page-2/index.html",
      totalPages: 3,
      totalResults: 11,
    },
    renderOrder: 1,
    results: 1,
    search: Search {},
    tags: [
    ],
    url: "/pagination/page-3/",
  },
  dest: {
    ext: ".html",
    path: "/pagination/page-3/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pagination[2]",
    remote: undefined,
  },
}
`;
